finish styling header

--- a/style/base/_foundation.scss
+++ b/style/base/_foundation.scss
@@ -1,4 +1,7 @@
 body {
+    background-color: bisque;
+
+
     height: 100vh;
     width: 428px;
 
@@ -7,3 +10,6 @@ body {
     font-style: normal;
 }
 
+.theme--cloudy {
+    background-image: ;
+}
