--- a/style/base/blocks/_main-card.scss
+++ b/style/base/blocks/_main-card.scss
@@ -1,20 +1,80 @@
-.weather-card{
+.weather-card {
 
+    
+    
+    &__header {
     display: flex;
     flex-direction: column;
     align-items: center;
 
+    width: 360px;
+    height: 386px;
+    
+    font-weight: 500;
+    font-size: 25px;
+    line-height: 38px;
+    
+    color: #CAD7DF;
+    
+    background: #91B4C6;
+    border-radius: 35px;
+    
+    }
+
+    &__now {
+       display: flex; 
+       align-items: center;
+
+       gap: 15px;
+    }
+
+    &__title {
+        font-weight: 500;
+        font-size: 25px;
+        line-height: 38px;
+    }
+
+    &__temp {
+        display: flex ;
+        align-items: center;
+
+        gap: 20px;
+
+         &--title {
+         font-weight: 500;
+         font-size: 100px;
+         line-height: 150px;
+
+         }
+
+
+    }
+
+    &__icon {
+        width: 96px;
+        height: 75px;
+    }
+
+    &__day {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        font-size: 15px;
+        line-height: 22px;
+
+        gap: 23px;
+        margin-bottom: 15px;
+    }
+
+    &__desc {
+        font-weight: 600;
+        font-size: 20px;
+        line-height: 30px;
+    }
+
+    &__inf {
+        font-size: 15px;
+    }
 }
 
-.weather-card__header {
-
-font-weight: 500;
-font-size: 25px;
-line-height: 38px;
-
-color: #CAD7DF;
-
-background: #91B4C6;
-border-radius: 35px;
-
-}
