add themes, delete files themes

--- a/style/abstracts/_var.scss
+++ b/style/abstracts/_var.scss
@@ -1,5 +1,17 @@
-//  COLORS 
+// background-image
 
+$cloudy-1 : url(/img/weather/cloudy/CLOUDY_1.png);
+$cloudy-2 : url(/img/weather/cloudy/CLOUDY_2.png);
+$cloudy-3 : url(/img/weather/cloudy/CLOUDY_3.png);
+$cloudy-4 : url(/img/weather/cloudy/CLOUDY_4.png);
 
+$sunny-1 : url(/img/weather/sunny/SUNNY_1.png);
+$sunny-2 : url(/img/weather/sunny/SUNNY_2.png);
 
-// TYPOGRAPHY
+$rainy-1 : url(/img/weather/rainy/RAINY_1.png);
+$rainy-2 : url(/img/weather/rainy/RAINY_2.png);
+$rainy-3 : url(/img/weather/rainy/RAINY_3.png);
+
+$snowy-1 : url(/img/weather/snowy/SNOWY_1.png);
+$snowy-2 : url(/img/weather/snowy/SNOWY_2.png);
+
