--- a/style/base/blocks/_main-card.scss
+++ b/style/base/blocks/_main-card.scss
@@ -1,23 +1,30 @@
 .weather-card {
-
-    
-    
-    &__header {
     display: flex;
     flex-direction: column;
     align-items: center;
+    
+    margin-top: 61px;
 
+    
+    &__header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        
+        height: 386px;
     width: 360px;
-    height: 386px;
-    
-    font-weight: 500;
-    font-size: 25px;
-    line-height: 38px;
-    
-    color: #CAD7DF;
-    
-    background: #91B4C6;
-    border-radius: 35px;
+
+        
+        font-weight: 500;
+        font-size: 25px;
+        line-height: 38px;
+        
+        color: #CAD7DF;
+        
+        border-radius: 35px;
+        background: #91B4C6;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 35px;
     
     }
 
@@ -26,6 +33,7 @@
        align-items: center;
 
        gap: 15px;
+       margin-top: 25px;
     }
 
     &__title {
@@ -44,6 +52,19 @@
          font-weight: 500;
          font-size: 100px;
          line-height: 150px;
+         letter-spacing : 0px;
+
+         span {
+            position: relative;
+            bottom: 20px;
+            vertical-align : super;
+            margin-left: -20px;
+
+            font-size : 50px;
+            font-weight : 500;
+            line-height : 15px;
+
+         }
 
          }
 
@@ -59,11 +80,14 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        
+
+        height: 100%;
 
         font-size: 15px;
         line-height: 22px;
 
-        gap: 23px;
+        gap: 15px;
         margin-bottom: 15px;
     }
 
@@ -75,6 +99,8 @@
 
     &__inf {
         font-size: 15px;
+
+        gap: 50px;
     }
 }
 
