--- a/style/main.css
+++ b/style/main.css
@@ -75,7 +75,6 @@ select {
 body {
   background-color: bisque;
   color: white;
-  height: 100vh;
   width: 100%;
   max-width: 428px;
   font-family: "Poppins", sans-serif;
@@ -158,6 +157,7 @@ body {
 }
 
 .weather-card__today {
+  width: 360px;
   margin: 27px 34px 50px 34px;
   background: radial-gradient(97.57% 210.75% at 0.9% 2.98%, rgba(145, 180, 198, 0.525) 0%, rgba(145, 180, 198, 0.225) 100%);
   -webkit-backdrop-filter: blur(21px);
@@ -169,29 +169,42 @@ body {
   grid-template-columns: repeat(5, 1fr);
   grid-template-rows: auto;
   gap: 20px;
+  row-gap: 40px;
+  place-items: center;
   font-size: 15px;
+  position: relative;
   padding: 20px;
+}
+.weather-card__today ul::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  width: 75%;
+  height: 2px;
+  background-color: rgba(255, 255, 255, 0.3);
 }
 .weather-card__today h4 {
   font-weight: 100 !important;
 }
 
-.mini-forecast {
+.mini-forecast span {
   display: flex;
-  flex-direction: column;
+  justify-content: space-evenly;
+  gap: 4px;
+  padding-right: 3px;
 }
 
 .footer {
+  max-width: 360px;
   font-weight: 600;
+  margin-bottom: 54px;
 }
 .footer__title {
-  margin: 0 0px 50px 60px;
   font-size: 20px;
   line-height: 30px;
   margin-bottom: 10px;
 }
 .footer__quote {
-  margin: 0 45px 50px 60px;
   font-size: 15px;
   line-height: 22px;
   overflow-wrap: break-word;
